--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% include 'includes/topo.html' %}
+{% extends "base.html" %}
   
-	
+{% block title %}Início{% endblock %}	
 
-{% include 'includes/rodape.html' %}
+
